// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project should adopt the "detailsBodyText" prop 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Project
    detailsBodyText="Hi body text"
    thumbnailUrl="/test.png"
    title="New Project"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <MediaAsset
          imageSource="/test.png"
          isOdd={undefined}
/>,
        <ProjectBody__ProjectBody>
          <div>
                    <ProjectHeader__ProjectHeader>
                              <H3__H3>
                                        New Project
                              </H3__H3>
                    </ProjectHeader__ProjectHeader>
          </div>
          <P__P
                    textAlign="left"
          >
                    Hi body text
          </P__P>
          <P__P
                    textAlign="right"
          >
                    <FormattedMessage
                              defaultMessage="More details →"
                              id="portfolio.components.Project.detailsLink"
                              values={Object {}}
                    >
                              [Function]
                    </FormattedMessage>
          </P__P>
</ProjectBody__ProjectBody>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "imageSource": "/test.png",
          "isOdd": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <div>
              <ProjectHeader__ProjectHeader>
                            <H3__H3>
                                          New Project
                            </H3__H3>
              </ProjectHeader__ProjectHeader>
</div>,
            <P__P
              textAlign="left"
>
              Hi body text
</P__P>,
            <P__P
              textAlign="right"
>
              <FormattedMessage
                            defaultMessage="More details →"
                            id="portfolio.components.Project.detailsLink"
                            values={Object {}}
              >
                            [Function]
              </FormattedMessage>
</P__P>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ProjectHeader__ProjectHeader>
                <H3__H3>
                                New Project
                </H3__H3>
</ProjectHeader__ProjectHeader>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <H3__H3>
                  New Project
</H3__H3>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "New Project",
                },
                "ref": null,
                "rendered": "New Project",
                "type": [Function],
              },
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Hi body text",
              "textAlign": "left",
            },
            "ref": null,
            "rendered": "Hi body text",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <FormattedMessage
                defaultMessage="More details →"
                id="portfolio.components.Project.detailsLink"
                values={Object {}}
>
                [Function]
</FormattedMessage>,
              "textAlign": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": [Function],
                "defaultMessage": "More details →",
                "id": "portfolio.components.Project.detailsLink",
                "values": Object {},
              },
              "ref": null,
              "rendered": [Function],
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MediaAsset
            imageSource="/test.png"
            isOdd={undefined}
/>,
          <ProjectBody__ProjectBody>
            <div>
                        <ProjectHeader__ProjectHeader>
                                    <H3__H3>
                                                New Project
                                    </H3__H3>
                        </ProjectHeader__ProjectHeader>
            </div>
            <P__P
                        textAlign="left"
            >
                        Hi body text
            </P__P>
            <P__P
                        textAlign="right"
            >
                        <FormattedMessage
                                    defaultMessage="More details →"
                                    id="portfolio.components.Project.detailsLink"
                                    values={Object {}}
                        >
                                    [Function]
                        </FormattedMessage>
            </P__P>
</ProjectBody__ProjectBody>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "imageSource": "/test.png",
            "isOdd": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div>
                <ProjectHeader__ProjectHeader>
                                <H3__H3>
                                                New Project
                                </H3__H3>
                </ProjectHeader__ProjectHeader>
</div>,
              <P__P
                textAlign="left"
>
                Hi body text
</P__P>,
              <P__P
                textAlign="right"
>
                <FormattedMessage
                                defaultMessage="More details →"
                                id="portfolio.components.Project.detailsLink"
                                values={Object {}}
                >
                                [Function]
                </FormattedMessage>
</P__P>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ProjectHeader__ProjectHeader>
                  <H3__H3>
                                    New Project
                  </H3__H3>
</ProjectHeader__ProjectHeader>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <H3__H3>
                    New Project
</H3__H3>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "New Project",
                  },
                  "ref": null,
                  "rendered": "New Project",
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Hi body text",
                "textAlign": "left",
              },
              "ref": null,
              "rendered": "Hi body text",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <FormattedMessage
                  defaultMessage="More details →"
                  id="portfolio.components.Project.detailsLink"
                  values={Object {}}
>
                  [Function]
</FormattedMessage>,
                "textAlign": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": [Function],
                  "defaultMessage": "More details →",
                  "id": "portfolio.components.Project.detailsLink",
                  "values": Object {},
                },
                "ref": null,
                "rendered": [Function],
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Project should adopt the "detailsTitle" prop 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Project
    detailsTitle="Hi Details Title"
    thumbnailUrl="/test.png"
    title="New Project"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <MediaAsset
          imageSource="/test.png"
          isOdd={undefined}
/>,
        <ProjectBody__ProjectBody>
          <div>
                    <ProjectHeader__ProjectHeader>
                              <H3__H3>
                                        New Project
                              </H3__H3>
                    </ProjectHeader__ProjectHeader>
          </div>
          <P__P
                    textAlign="left"
          />
          <P__P
                    textAlign="right"
          >
                    <FormattedMessage
                              defaultMessage="More details →"
                              id="portfolio.components.Project.detailsLink"
                              values={Object {}}
                    >
                              [Function]
                    </FormattedMessage>
          </P__P>
</ProjectBody__ProjectBody>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "imageSource": "/test.png",
          "isOdd": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <div>
              <ProjectHeader__ProjectHeader>
                            <H3__H3>
                                          New Project
                            </H3__H3>
              </ProjectHeader__ProjectHeader>
</div>,
            <P__P
              textAlign="left"
/>,
            <P__P
              textAlign="right"
>
              <FormattedMessage
                            defaultMessage="More details →"
                            id="portfolio.components.Project.detailsLink"
                            values={Object {}}
              >
                            [Function]
              </FormattedMessage>
</P__P>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ProjectHeader__ProjectHeader>
                <H3__H3>
                                New Project
                </H3__H3>
</ProjectHeader__ProjectHeader>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <H3__H3>
                  New Project
</H3__H3>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "New Project",
                },
                "ref": null,
                "rendered": "New Project",
                "type": [Function],
              },
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "textAlign": "left",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <FormattedMessage
                defaultMessage="More details →"
                id="portfolio.components.Project.detailsLink"
                values={Object {}}
>
                [Function]
</FormattedMessage>,
              "textAlign": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": [Function],
                "defaultMessage": "More details →",
                "id": "portfolio.components.Project.detailsLink",
                "values": Object {},
              },
              "ref": null,
              "rendered": [Function],
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MediaAsset
            imageSource="/test.png"
            isOdd={undefined}
/>,
          <ProjectBody__ProjectBody>
            <div>
                        <ProjectHeader__ProjectHeader>
                                    <H3__H3>
                                                New Project
                                    </H3__H3>
                        </ProjectHeader__ProjectHeader>
            </div>
            <P__P
                        textAlign="left"
            />
            <P__P
                        textAlign="right"
            >
                        <FormattedMessage
                                    defaultMessage="More details →"
                                    id="portfolio.components.Project.detailsLink"
                                    values={Object {}}
                        >
                                    [Function]
                        </FormattedMessage>
            </P__P>
</ProjectBody__ProjectBody>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "imageSource": "/test.png",
            "isOdd": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div>
                <ProjectHeader__ProjectHeader>
                                <H3__H3>
                                                New Project
                                </H3__H3>
                </ProjectHeader__ProjectHeader>
</div>,
              <P__P
                textAlign="left"
/>,
              <P__P
                textAlign="right"
>
                <FormattedMessage
                                defaultMessage="More details →"
                                id="portfolio.components.Project.detailsLink"
                                values={Object {}}
                >
                                [Function]
                </FormattedMessage>
</P__P>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ProjectHeader__ProjectHeader>
                  <H3__H3>
                                    New Project
                  </H3__H3>
</ProjectHeader__ProjectHeader>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <H3__H3>
                    New Project
</H3__H3>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "New Project",
                  },
                  "ref": null,
                  "rendered": "New Project",
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "textAlign": "left",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <FormattedMessage
                  defaultMessage="More details →"
                  id="portfolio.components.Project.detailsLink"
                  values={Object {}}
>
                  [Function]
</FormattedMessage>,
                "textAlign": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": [Function],
                  "defaultMessage": "More details →",
                  "id": "portfolio.components.Project.detailsLink",
                  "values": Object {},
                },
                "ref": null,
                "rendered": [Function],
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Project should adopt the "isOdd" prop 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Project
    isOdd={false}
    thumbnailUrl="/test.png"
    title="New Project"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <MediaAsset
          imageSource="/test.png"
          isOdd={false}
/>,
        <ProjectBody__ProjectBody>
          <div>
                    <ProjectHeader__ProjectHeader>
                              <H3__H3>
                                        New Project
                              </H3__H3>
                    </ProjectHeader__ProjectHeader>
          </div>
          <P__P
                    textAlign="left"
          />
          <P__P
                    textAlign="right"
          >
                    <FormattedMessage
                              defaultMessage="More details →"
                              id="portfolio.components.Project.detailsLink"
                              values={Object {}}
                    >
                              [Function]
                    </FormattedMessage>
          </P__P>
</ProjectBody__ProjectBody>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "imageSource": "/test.png",
          "isOdd": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <div>
              <ProjectHeader__ProjectHeader>
                            <H3__H3>
                                          New Project
                            </H3__H3>
              </ProjectHeader__ProjectHeader>
</div>,
            <P__P
              textAlign="left"
/>,
            <P__P
              textAlign="right"
>
              <FormattedMessage
                            defaultMessage="More details →"
                            id="portfolio.components.Project.detailsLink"
                            values={Object {}}
              >
                            [Function]
              </FormattedMessage>
</P__P>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ProjectHeader__ProjectHeader>
                <H3__H3>
                                New Project
                </H3__H3>
</ProjectHeader__ProjectHeader>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <H3__H3>
                  New Project
</H3__H3>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "New Project",
                },
                "ref": null,
                "rendered": "New Project",
                "type": [Function],
              },
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "textAlign": "left",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <FormattedMessage
                defaultMessage="More details →"
                id="portfolio.components.Project.detailsLink"
                values={Object {}}
>
                [Function]
</FormattedMessage>,
              "textAlign": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": [Function],
                "defaultMessage": "More details →",
                "id": "portfolio.components.Project.detailsLink",
                "values": Object {},
              },
              "ref": null,
              "rendered": [Function],
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MediaAsset
            imageSource="/test.png"
            isOdd={false}
/>,
          <ProjectBody__ProjectBody>
            <div>
                        <ProjectHeader__ProjectHeader>
                                    <H3__H3>
                                                New Project
                                    </H3__H3>
                        </ProjectHeader__ProjectHeader>
            </div>
            <P__P
                        textAlign="left"
            />
            <P__P
                        textAlign="right"
            >
                        <FormattedMessage
                                    defaultMessage="More details →"
                                    id="portfolio.components.Project.detailsLink"
                                    values={Object {}}
                        >
                                    [Function]
                        </FormattedMessage>
            </P__P>
</ProjectBody__ProjectBody>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "imageSource": "/test.png",
            "isOdd": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div>
                <ProjectHeader__ProjectHeader>
                                <H3__H3>
                                                New Project
                                </H3__H3>
                </ProjectHeader__ProjectHeader>
</div>,
              <P__P
                textAlign="left"
/>,
              <P__P
                textAlign="right"
>
                <FormattedMessage
                                defaultMessage="More details →"
                                id="portfolio.components.Project.detailsLink"
                                values={Object {}}
                >
                                [Function]
                </FormattedMessage>
</P__P>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ProjectHeader__ProjectHeader>
                  <H3__H3>
                                    New Project
                  </H3__H3>
</ProjectHeader__ProjectHeader>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <H3__H3>
                    New Project
</H3__H3>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "New Project",
                  },
                  "ref": null,
                  "rendered": "New Project",
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "textAlign": "left",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <FormattedMessage
                  defaultMessage="More details →"
                  id="portfolio.components.Project.detailsLink"
                  values={Object {}}
>
                  [Function]
</FormattedMessage>,
                "textAlign": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": [Function],
                  "defaultMessage": "More details →",
                  "id": "portfolio.components.Project.detailsLink",
                  "values": Object {},
                },
                "ref": null,
                "rendered": [Function],
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Project should adopt the "title" prop 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Project
    thumbnailUrl="/test.png"
    title="Hi Title"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <MediaAsset
          imageSource="/test.png"
          isOdd={undefined}
/>,
        <ProjectBody__ProjectBody>
          <div>
                    <ProjectHeader__ProjectHeader>
                              <H3__H3>
                                        Hi Title
                              </H3__H3>
                    </ProjectHeader__ProjectHeader>
          </div>
          <P__P
                    textAlign="left"
          />
          <P__P
                    textAlign="right"
          >
                    <FormattedMessage
                              defaultMessage="More details →"
                              id="portfolio.components.Project.detailsLink"
                              values={Object {}}
                    >
                              [Function]
                    </FormattedMessage>
          </P__P>
</ProjectBody__ProjectBody>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "imageSource": "/test.png",
          "isOdd": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <div>
              <ProjectHeader__ProjectHeader>
                            <H3__H3>
                                          Hi Title
                            </H3__H3>
              </ProjectHeader__ProjectHeader>
</div>,
            <P__P
              textAlign="left"
/>,
            <P__P
              textAlign="right"
>
              <FormattedMessage
                            defaultMessage="More details →"
                            id="portfolio.components.Project.detailsLink"
                            values={Object {}}
              >
                            [Function]
              </FormattedMessage>
</P__P>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ProjectHeader__ProjectHeader>
                <H3__H3>
                                Hi Title
                </H3__H3>
</ProjectHeader__ProjectHeader>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <H3__H3>
                  Hi Title
</H3__H3>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Hi Title",
                },
                "ref": null,
                "rendered": "Hi Title",
                "type": [Function],
              },
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "textAlign": "left",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <FormattedMessage
                defaultMessage="More details →"
                id="portfolio.components.Project.detailsLink"
                values={Object {}}
>
                [Function]
</FormattedMessage>,
              "textAlign": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": [Function],
                "defaultMessage": "More details →",
                "id": "portfolio.components.Project.detailsLink",
                "values": Object {},
              },
              "ref": null,
              "rendered": [Function],
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MediaAsset
            imageSource="/test.png"
            isOdd={undefined}
/>,
          <ProjectBody__ProjectBody>
            <div>
                        <ProjectHeader__ProjectHeader>
                                    <H3__H3>
                                                Hi Title
                                    </H3__H3>
                        </ProjectHeader__ProjectHeader>
            </div>
            <P__P
                        textAlign="left"
            />
            <P__P
                        textAlign="right"
            >
                        <FormattedMessage
                                    defaultMessage="More details →"
                                    id="portfolio.components.Project.detailsLink"
                                    values={Object {}}
                        >
                                    [Function]
                        </FormattedMessage>
            </P__P>
</ProjectBody__ProjectBody>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "imageSource": "/test.png",
            "isOdd": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div>
                <ProjectHeader__ProjectHeader>
                                <H3__H3>
                                                Hi Title
                                </H3__H3>
                </ProjectHeader__ProjectHeader>
</div>,
              <P__P
                textAlign="left"
/>,
              <P__P
                textAlign="right"
>
                <FormattedMessage
                                defaultMessage="More details →"
                                id="portfolio.components.Project.detailsLink"
                                values={Object {}}
                >
                                [Function]
                </FormattedMessage>
</P__P>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ProjectHeader__ProjectHeader>
                  <H3__H3>
                                    Hi Title
                  </H3__H3>
</ProjectHeader__ProjectHeader>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <H3__H3>
                    Hi Title
</H3__H3>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Hi Title",
                  },
                  "ref": null,
                  "rendered": "Hi Title",
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "textAlign": "left",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <FormattedMessage
                  defaultMessage="More details →"
                  id="portfolio.components.Project.detailsLink"
                  values={Object {}}
>
                  [Function]
</FormattedMessage>,
                "textAlign": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": [Function],
                  "defaultMessage": "More details →",
                  "id": "portfolio.components.Project.detailsLink",
                  "values": Object {},
                },
                "ref": null,
                "rendered": [Function],
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Project should render and match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Project
    thumbnailUrl="/test.png"
    title="New Project"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <MediaAsset
          imageSource="/test.png"
          isOdd={undefined}
/>,
        <ProjectBody__ProjectBody>
          <div>
                    <ProjectHeader__ProjectHeader>
                              <H3__H3>
                                        New Project
                              </H3__H3>
                    </ProjectHeader__ProjectHeader>
          </div>
          <P__P
                    textAlign="left"
          />
          <P__P
                    textAlign="right"
          >
                    <FormattedMessage
                              defaultMessage="More details →"
                              id="portfolio.components.Project.detailsLink"
                              values={Object {}}
                    >
                              [Function]
                    </FormattedMessage>
          </P__P>
</ProjectBody__ProjectBody>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "imageSource": "/test.png",
          "isOdd": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <div>
              <ProjectHeader__ProjectHeader>
                            <H3__H3>
                                          New Project
                            </H3__H3>
              </ProjectHeader__ProjectHeader>
</div>,
            <P__P
              textAlign="left"
/>,
            <P__P
              textAlign="right"
>
              <FormattedMessage
                            defaultMessage="More details →"
                            id="portfolio.components.Project.detailsLink"
                            values={Object {}}
              >
                            [Function]
              </FormattedMessage>
</P__P>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ProjectHeader__ProjectHeader>
                <H3__H3>
                                New Project
                </H3__H3>
</ProjectHeader__ProjectHeader>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <H3__H3>
                  New Project
</H3__H3>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "New Project",
                },
                "ref": null,
                "rendered": "New Project",
                "type": [Function],
              },
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": undefined,
              "textAlign": "left",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <FormattedMessage
                defaultMessage="More details →"
                id="portfolio.components.Project.detailsLink"
                values={Object {}}
>
                [Function]
</FormattedMessage>,
              "textAlign": "right",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": [Function],
                "defaultMessage": "More details →",
                "id": "portfolio.components.Project.detailsLink",
                "values": Object {},
              },
              "ref": null,
              "rendered": [Function],
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <MediaAsset
            imageSource="/test.png"
            isOdd={undefined}
/>,
          <ProjectBody__ProjectBody>
            <div>
                        <ProjectHeader__ProjectHeader>
                                    <H3__H3>
                                                New Project
                                    </H3__H3>
                        </ProjectHeader__ProjectHeader>
            </div>
            <P__P
                        textAlign="left"
            />
            <P__P
                        textAlign="right"
            >
                        <FormattedMessage
                                    defaultMessage="More details →"
                                    id="portfolio.components.Project.detailsLink"
                                    values={Object {}}
                        >
                                    [Function]
                        </FormattedMessage>
            </P__P>
</ProjectBody__ProjectBody>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "imageSource": "/test.png",
            "isOdd": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div>
                <ProjectHeader__ProjectHeader>
                                <H3__H3>
                                                New Project
                                </H3__H3>
                </ProjectHeader__ProjectHeader>
</div>,
              <P__P
                textAlign="left"
/>,
              <P__P
                textAlign="right"
>
                <FormattedMessage
                                defaultMessage="More details →"
                                id="portfolio.components.Project.detailsLink"
                                values={Object {}}
                >
                                [Function]
                </FormattedMessage>
</P__P>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ProjectHeader__ProjectHeader>
                  <H3__H3>
                                    New Project
                  </H3__H3>
</ProjectHeader__ProjectHeader>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <H3__H3>
                    New Project
</H3__H3>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "New Project",
                  },
                  "ref": null,
                  "rendered": "New Project",
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": undefined,
                "textAlign": "left",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": <FormattedMessage
                  defaultMessage="More details →"
                  id="portfolio.components.Project.detailsLink"
                  values={Object {}}
>
                  [Function]
</FormattedMessage>,
                "textAlign": "right",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": [Function],
                  "defaultMessage": "More details →",
                  "id": "portfolio.components.Project.detailsLink",
                  "values": Object {},
                },
                "ref": null,
                "rendered": [Function],
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
